@@ -5,7 +5,7 @@ module shared.service {
     exports com.mgtechno.shared.jdbc;
     requires java.base;
     requires java.logging;
-    requires jdk.incubator.httpclient;
+    requires java.net.http;
     requires jdk.httpserver;
     requires java.json;
     requires java.sql;
